# compressive_sensing

./: pyproject.toml
compressive_sensing/: construct_test_signal.py  test_resample.py  test_signal_250M.npy
compressive_sensing/dictionary/: dictionary_training.py
data/Faults_d10_FPP_IDC-20250701T175716Z-1-001/Faults_d10_FPP_IDC/: Converter_csv2txt_v2.m  HVDC_2024_05_24_fs250M_d10_Fpg_WithCapacitors_01.m  HVDC_2024_05_24_fs250M_d10_Fpg_WithCapacitors_01.txt  HVDC_2024_05_24_fs250M_d10_Fpp_WithCapacitors_01.m  HVDC_2024_05_24_fs250M_d10_Fpp_WithCapacitors_01.txt  fTWDR_Energia_2024.m  tek0385.csv  tek0386.csv  tek0386.set  tek0387.csv  tek0388.csv  tek0390.csv  tek0391.csv  tek0392.csv  tek0393.csv  tek0394.csv
data/Faults_d20_FPP_IDC-20250701T175717Z-1-001/Faults_d20_FPP_IDC/: Converter_csv2txt_v2.m  HVDC_2024_05_24_fs250M_d20_Fpg_WithCapacitors_01.m  HVDC_2024_05_24_fs250M_d20_Fpg_WithCapacitors_01.txt  HVDC_2024_05_24_fs250M_d20_Fpp_WithCapacitors_01.m  HVDC_2024_05_24_fs250M_d20_Fpp_WithCapacitors_01.txt  read_txt_v2.m  tek0405.csv  tek0406.csv  tek0407.csv  tek0408.csv  tek0409.csv  tek0410.csv  tek0411.csv  tek0412.csv  tek0413.csv  tek0413.set  tek0414.csv
data/Faults_d30_FPP_IDC-20250701T175723Z-1-001/Faults_d30_FPP_IDC/: tek0325.csv  tek0325.set  tek0326.csv  tek0327.csv  tek0328.csv  tek0329.csv  tek0330.csv  tek0331.csv  tek0332.csv  tek0333.csv  tek0334.csv  tek0334.set
data/Faults_d40_FPP_IDC-20250701T175725Z-1-001/Faults_d40_FPP_IDC/: tek0425.csv  tek0426.csv  tek0427.csv  (+8 more)
learning_cs/: 1d_signal_reconstruction.py  sparse_code_exemple.py
(+54 files in other folders)
